--- a/vignettes/Rraven.Rmd
+++ b/vignettes/Rraven.Rmd
@@ -14,7 +14,7 @@ output:
 vignette: >
   %\VignetteIndexEntry{Rraven: Connecting R and Raven Sound Analysis Software}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+  \usepackage[utf8]{inputenc}
 ---
 
 
