--- a/vignettes/Rraven.Rmd
+++ b/vignettes/Rraven.Rmd
@@ -30,12 +30,22 @@ options(width = 150, max.print = 100)
 #website to fix gifs
 #https://ezgif.com/optimize
 ```
-
-<br>
+ &nbsp; 
 
 The `Rraven` package is designed to facilitate the exchange of data between R and  [Raven sound analysis software](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) ([Cornell Lab of Ornithology](http://www.birds.cornell.edu)). [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) provides very  powerful tools for the analysis of (animal) sounds. R can simplify the automatization of complex routines of analyses. Furthermore, R packages as [warbleR](https://cran.r-project.org/package=warbleR), [seewave](https://cran.r-project.org/package=seewave) and [monitoR](https://cran.r-project.org/package=monitoR) (among others) provide additional methods of analysis, working as a perfect complement for those found in [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html). Hence, bridging these applications can largely expand the bioacoustician's toolkit.
 
-Currently, most analyses in [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) cannot be run in the background from a command terminal. Thus, most `Rraven` functions are design to simplify the exchange of data between the two programs, and in some cases, export files to  [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) for further analysis. This vignette provides detailed examples for each function in `Rraven`, including both the R code as well as the additional steps in [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) required to fully accomplished the analyses. Raven Pro must be installed to be able to run some of the code. 
+Currently, most analyses in [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) cannot be run in the background from a command terminal. Thus, most `Rraven` functions are design to simplify the exchange of data between the two programs, and in some cases, export files to  [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) for further analysis. This vignette provides detailed examples for each function in `Rraven`, including both the R code as well as the additional steps in [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) required to fully accomplished the analyses. Raven Pro must be installed to be able to run some of the code. Note that the animations explaining this additional [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) steps are more shown in more detailed in the [github](http://github.com/) version of this vignette, which can be downloaded as follows:
+
+
+```{r}
+
+download.file(url = "https://github.com/maRce10/Rraven/raw/master/gifs/Rraven.hitgub.html", destfile = "Rraven.hitgub.html")
+
+```
+ &nbsp; 
+ 
+The downloaded file can be opened by any internet browser.
+
 
 Before getting into the functions, the packages must be installed and loaded. I recommend using the latest developmental version, which is found in [github](http://github.com/). To do so, you need the R package [devtools](https://cran.r-project.org/package=devtools) (which of course should be installed!). Some [warbleR](https://cran.r-project.org/package=warbleR) functions and example data sets will be used, so [warbleR](https://cran.r-project.org/package=warbleR) should be installed as well:
 
@@ -415,7 +425,7 @@ list.files(path = file.path(tempdir(), "cuts"))
  
 Every selection is in its own sound file (labeled as `paste(sound.files, selec)`). Now open [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html) and run the batch correlator on the 'cuts' folder as follows:
 
-![gif1](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt_short_raven_correlator.gif)
+![gif1](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt2_short_raven_correlator.gif)
  &nbsp; 
 
 And then import the output file into R:
@@ -504,12 +514,12 @@ st1 <- selec.table[selec.table$sound.files == "Phae.long1.wav",]
 exp_raven(st1, file.name = "Phaethornis 1", khz.to.hz = TRUE, sound.file.path = tempdir())
 
 ```
-![gif2](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt_short_exp_raven1.gif)
+![gif2](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt2_short_exp_raven1.gif)
  &nbsp; 
 
 This is useful to add new selections or even new measurements:
 
-![gif3](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt_short_exp_raven2.gif)
+![gif3](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt2_short_exp_raven2.gif)
  &nbsp; 
 
 If several sound files are available, users can either export them as a single selection file or as multiple selection files (one for each sound file). This example creates a multiple sound file selection:
@@ -523,7 +533,7 @@ sound.file.path = tempdir(), single.file = TRUE)
 
 These type of tables can be opened as a multiple file display in [Raven](http://www.birds.cornell.edu/brp/raven/RavenOverview.html):
 
-![gif4](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt_short_exp_raven3.gif)
+![gif4](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt2_short_exp_raven3.gif)
  &nbsp; 
 
 ---
@@ -545,7 +555,7 @@ run_raven(raven.path = raven.path, sound.files = c("Phae.long1.wav", "Phae.long2
 
 ``` 
 
-![gif5](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt_short_run_raven1.gif)
+![gif5](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt2_short_run_raven1.gif)
  &nbsp; 
  
 See `imp_raven` above for more details on additional settings when importing selections.
@@ -565,7 +575,7 @@ sound.files = "BlackCappedVireo.aif", path = file.path(raven.path, "Examples"))
 
 ```
 
-![gif6](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt_short_raven_batch_detec.gif)
+![gif6](https://raw.githubusercontent.com/maRce10/Rraven/master/gifs/opt2_short_raven_batch_detec.gif)
  &nbsp; 
  
 ---
